Add usage examples